# matrix-client-boilerplate

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: command_bot.rs
src/: lib.rs
