[package]
name = "matrix-client-boilerplate"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"
matrix-sdk = "0.6.2"
serde_json = "1"
tokio = "1"

[dev-dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing-subscriber = "0.3.15"
